@@ -298,7 +298,6 @@ else {
 	echo '<div id="main_pure">';
 }
 
-
 // http://es2.php.net/manual/en/ref.session.php#64525
 // Session locking concurrency speedup!
 session_write_close (); 
@@ -319,9 +318,9 @@ else {
 	if ($page != "") {
 		$page .= '.php';
 		// Enterprise ACL check
-		if (enterprise_hook ('enterprise_acl', array ($config['id_user'], $sec, $sec2)) == false) {
+		if (enterprise_hook ('enterprise_acl', array ($config['id_user'], $sec, $sec2, true)) == false) {
 			require ("general/noaccess.php");
-		} 
+		}
 		elseif (file_exists ($page)) {
 			if (! extensions_is_extension ($page)) {
 				require_once($page);
